<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/viewPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        class="com.hy.news.view.LazyViewPager"
        />


    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:paddingTop="2dp"
        android:gravity="center_vertical"
        android:background="@drawable/bottom_tab_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_function"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_tab_home"
            android:checked="true"
            android:text="@string/home_page"/>

        <RadioButton
            android:id="@+id/rb_news_center"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_tab_news"
            android:text="@string/news_center"/>

        <RadioButton
            android:id="@+id/rb_intelligence_service"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_tab_services"
            android:text="@string/intelligence_service"/>

        <RadioButton
            android:id="@+id/rb_government_guide"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_tab_guide"
            android:text="@string/government_guide"/>

        <RadioButton
            android:id="@+id/rb_settings"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/bottom_tab_settings"
            android:text="@string/settings"/>
    </RadioGroup>

</LinearLayout>